@@ -3,6 +3,9 @@ package ca.ubc.cpsc304.database;
 import ca.ubc.cpsc304.model.*;
 
 import javax.swing.table.DefaultTableModel;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileReader;
 import java.sql.*;
 import java.util.ArrayList;
 
@@ -36,10 +39,58 @@ public class DatabaseConnectionHandler {
             connection.setAutoCommit(false);
 
             System.out.println("\nConnected to Oracle!");
+            loadData();
+            System.out.println("Loaded data");
             return true;
         } catch (SQLException e) {
             System.out.println(LOG_TAG + " " + e.getMessage());
             return false;
+        }
+    }
+
+    private void loadData() throws SQLException {
+        String s            = new String();
+        StringBuffer sb = new StringBuffer();
+
+        try
+        {
+            FileReader fr = new FileReader(new File("resources/vehicletables.sql"));
+            // be sure to not have line starting with "--" or "/*" or any other non alphabetical character
+
+            BufferedReader br = new BufferedReader(fr);
+
+            while((s = br.readLine()) != null)
+            {
+                sb.append(s);
+            }
+            br.close();
+
+            // here is our splitter ! We use ";" as a delimiter for each request
+            // then we are sure to have well formed statements
+            String[] inst = sb.toString().split(";");
+
+            Statement st = connection.createStatement();
+
+            for(int i = 0; i<inst.length; i++)
+            {
+                // we ensure that there is no spaces before or after the request string
+                // in order to not execute empty statements
+                if(!inst[i].trim().equals(""))
+                {
+                    st.executeUpdate(inst[i]);
+                    System.out.println(">>"+inst[i]);
+                }
+            }
+
+        }
+        catch(Exception e)
+        {
+            System.out.println("*** Error : "+e.toString());
+            System.out.println("*** ");
+            System.out.println("*** Error : ");
+            e.printStackTrace();
+            System.out.println("################################################");
+            System.out.println(sb.toString());
         }
     }
 
@@ -193,9 +244,11 @@ public class DatabaseConnectionHandler {
     public DefaultTableModel getVehicleInfo(String vtname, String location, String fromDateTime, String toDateTime) {
         DefaultTableModel vmodel = new DefaultTableModel(new String[]{"Vehicle Type", "Location", "Model", "Make", "Year",
                 "Colour", "Features", "Current Status"}, 0);
-
+        String vt = vtname;
+        String loc = location;
         String from = "";
         String to = "";
+
         if (!fromDateTime.isBlank()) {
             from = "TO_TIMESTAMP('" + fromDateTime + ":00:00')";
         }
@@ -207,9 +260,8 @@ public class DatabaseConnectionHandler {
             Statement stmt = connection.createStatement();
             ResultSet rs;
             // TODO test this query
-            if (vtname.isBlank() ^ location.isBlank() ^ fromDateTime.isBlank() ^ toDateTime.isBlank()) {
-                rs = stmt.executeQuery("SELECT v.vtname, location, model, make, year, colour, features, status " +
-                        "FROM vehicles v, vtype t WHERE v.vtname=t.vtname ORDER  BY v.vtname, location");
+            if (vt.trim().isEmpty() && loc.trim().isEmpty() && from.trim().isEmpty() && to.trim().isEmpty()) {
+                rs = stmt.executeQuery("SELECT v.vtname, location, model, make, v.year, colour, features, status FROM vehicles v, vtype t WHERE v.vtname=t.vtname ORDER BY v.vtname, location");
             } else {
                 boolean prev = false;
                 String sqlquery = "SELECT v.vtname, location, model, make, year, colour, features, status " +
@@ -225,7 +277,7 @@ public class DatabaseConnectionHandler {
                     sqlquery = sqlquery + "location = " + "'" + location + "'";
                     prev = true;
                 }
-                if (!from.isBlank() ^ !to.isBlank()) {
+                if (!from.isBlank() && !to.isBlank()) {
                     if (prev) {
                         sqlquery = sqlquery + " AND ";
                     }
@@ -261,6 +313,7 @@ public class DatabaseConnectionHandler {
                 String c = rs.getString("colour");
                 String f = rs.getString("features");
                 vmodel.addRow(new Object[]{v, l, mo, ma, y, c, f, s});
+                System.out.println(vmodel.getRowCount());
             }
 
             rs.close();
